# vs2022-universal-pe-packer

./: 0day_injector_kit_analysis.py  AutoCompileFUD.bat  AutoFUDTester  AutoFUDTester.cpp  BRANCH_MASM_GUIDE.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_WINDOWS.md  BenignPacker.cpp  BenignPacker.sln  BenignPacker_Project_Fix_Guide.md  BenignPacker_WinMain_Fix.cpp  BlackMagii_Compiler.cpp  BlackMagii_Enhanced.cpp  BlackMamba_IRC_Bot.cpp  CMakeLists.txt  COMPILATION_FIXES_SUMMARY.md  COMPILATION_FIX_GUIDE.txt  COMPILE_GUIDE.md  COMPLETE_COMPILATION_FIXES_SUMMARY.md  COMPREHENSIVE_RECOVERY_COMPLETE.md  DDOS_TECHNIQUES_DOCUMENTATION.md  DEMO_FUD_OUTPUT.cpp  Debug_FUD_Issue.cpp  ENCRYPTION_IMPLEMENTATION_SUMMARY.md  ENHANCED_SOLUTION_SUMMARY.md  ENHANCED_TEST_STUB_4_ACHIEVEMENT.md  Enhanced_MircBotBuilder.cpp  FINAL_COMPILATION_FIXES_SUMMARY.md  FIXED_VS2022_GUI_Benign_Packer.cpp  FRAMEWORK_COMPLETE.md  FUDGenerator  FUD_Compiler_Fix.cpp  FUD_HTML_AES256_1754467180_1.cpp  FUD_HTML_AES256_1754467180_2.cpp  FUD_Launch_Control.cpp  FUD_XLL_XOR_1754467089_1.cpp  FUD_XLL_XOR_1754467089_2.cpp  FUD_XLL_XOR_1754467089_3.cpp  FilelessExecutor  (+387 more)
BenignPacker/: BenignPacker.vcxproj
BenignPacker_Integration/: BUILD_AND_RUN.md  BenignPacker.sln  build_benign_packer.bat
FIXED_BenignPacker_Integration/: BenignPacker.sln  QUICK_FIX_GUIDE.md
FIXED_BenignPacker_Integration/BenignPacker_Integration/BenignPacker/: BenignPacker.cpp  BenignPacker.vcxproj
FIXED_BenignPacker_Integration/BenignPacker_Integration/PluginFramework/: IPlugin.h  PluginFramework.vcxproj
MASM_2035_DOWNLOAD/: DOWNLOAD_INSTRUCTIONS.txt  MASM_2035_WEAPONIZED_COMPLETE_SUMMARY.md  build_mingw_masm_2035.bat
MASM_2035_Repository/: .gitignore  CHANGELOG.md  LICENSE  README.md
MASM_2035_Repository/examples/: basic_usage.cpp
MASM_2035_Repository/src/include/: UniqueStub71Plugin.h
MASM_2035_Repository/tools/: build.bat
MotherLilith/: CMakeLists.txt  mother_lilith.py
MotherLilith/plugins/: antivirus.py  recovery_agent.py
MotherLilith/src/: main.cpp
PluginFramework/: IPlugin.h  PluginFramework.vcxproj
Plugins/MASMAssemblerPlugin/: MASMAssemblerPlugin.vcxproj
Plugins/UniqueStub71Plugin/: UniqueStub71Plugin.vcxproj
docs/: ASSEMBLY_GUIDE.md  CHATGPT_INTEGRATION.md  CODING_GUIDE.md  GETTING_STARTED.md  QUICK_REFERENCE.md  TROUBLESHOOTING.md
enhanced_stubs/: test_4.cpp
examples/: CMakeLists.txt  file_manager.cpp  hello_world.asm  temperature_converter.cpp
final_101_stubs/: unique_stub_71.cpp
generated_obfuscation/: advanced_module_1.cpp  advanced_module_2.cpp  advanced_module_3.cpp  advanced_modules  polymorphic_variant_1.cpp  polymorphic_variant_2.cpp  polymorphic_variant_3.cpp  polymorphic_variant_4.cpp  polymorphic_variant_5.cpp  unlimited_obfuscator
github_compiler/: main.py
include/: assembler.h  calculator.h  chatgpt.h  game.h  utils.h
source/repos/VS2022Encryptor/: BUILD_EVERYTHING_FROM_SOURCE.md  CMakeLists.txt  COMPREHENSIVE_ANALYSIS.md  FILE_INVENTORY.txt  PROJECT_SIGNATURE.md  README.md  README_USAGE.md  VS2022Encryptor.vcxproj  build.sh  build_all.bat  build_all.sh  comprehensive_tester  comprehensive_tester.cpp  encryptor  encryptor.h  main.cpp  mass_stub_generator  mass_stub_generator.cpp  pe_encryptor.cpp  pe_encryptor.h  sample_test  sample_test.cpp  stealth_triple_encryptor.cpp  stealth_triple_encryptor.h  stub_generator  stub_generator.cpp  test_input.txt  test_pe_generator  (+1 more)
src/: CMakeLists.txt  assembler.cpp  calculator.cpp  chatgpt.cpp  game.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt
(+7 files in other folders)
